# extProcess

./: .gitignore  CMakeLists.txt
Phot/: CMakeLists.txt
Phot/auxdir/: default.param  default.sex  default.sex.template
Phot/conf/Phot/: generate_weight_map.conf  makeregionfile.conf  mergecatalogs.conf  sextractor.conf
Phot/conf/extSim/: background_test.conf  psf_test.conf  skymaker_test.conf  stamp_test.conf  wcs_test.conf
Phot/python/Phot/: catalog.py  generate_weight_map.py  image.py  makeregionfile.py  mergecatalogs.py  photometry.py  sextractor.py  truewcs.py  utils.py
Phot/scripts/: classstar_histogram.py  extractphotometry.sh  inout_histogram.py  magmag.py  measure_psf_sexcat.py  measure_psf_snapshots.py  mergecatalogs.sh  pix_histogram.py  plots.py  realout_histogram.py  signal_to_noise.py
Phot/tests/config/: sync.conf  test_file_list.txt
Phot/tests/data/config/: sync.conf  test_file_list.txt
Phot/tests/python/: background_test.py  catalog_test.py  image_test.py  photometry_test.py  psf_test.py  skymaker_test.py  smoke_test_sersic_des.py  smoke_test_sersic_kids.py  smoke_test_stamps_des.py  smoke_test_stamps_kids.py  stamp_test.py  star_test.py  test_background.py  utils_test.py  wcs_test.py
Phot/tests/python/fixtures/: PyDataSyncFixture.py
